--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,18 @@
         <title>Mejores cocteles del mundo mundial</title>
     </head>
     <body>
+        <p>Hola mundo 2</p>
         <div>
             <center>
                 <img src="paginaWeb/LaMejorCocteraDelMundoMundial.png" width="150px">
             </center>
         </div>
         <br>
-        <div>
+        <div> -->
             <fieldset>
                 <legend>Ingresar usuario</legend>
                 <center>
-                    <form action="paginaWeb/cocteles.html" method="POST">
+                    <form action="secciones/cocteles.html" method="POST">
                         <label for="Nombre">Nombre: </label>
                         <input type="text" name="Nombre" required="required" /></title><br /> 
                         <label for="Contraseña">Contraseña: </label>
