--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,35 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Mejores cocteles del mundo mundial</title>
-    </head>
-    <body>
-        <p>Hola mundo 2</p>
-        <div>
-            <center>
-                <img src="paginaWeb/LaMejorCocteraDelMundoMundial.png" width="150px">
-            </center>
-        </div>
-        <br>
-        <div> -->
-            <fieldset>
-                <legend>Ingresar usuario</legend>
-                <center>
-                    <form action="secciones/cocteles.html" method="POST">
-                        <label for="Nombre">Nombre: </label>
-                        <input type="text" name="Nombre" required="required" /></title><br /> 
-                        <label for="Contraseña">Contraseña: </label>
-                        <input type="password" name="Contraseña" required="required" /><br />
-                        <input type="submit" value="Submit" />
-                    </form>
-                </center>               
-            </fieldset>            
-        </div>        
-    </body>
-    <footer>
-        <p>Aquí van los datos empresariales</p>
-    </footer>
-</html>
+{%extends 'base.html'%}
+{%block title%}
+        
+{% endblock%}
+
+{%block content%}
+<div>
+    <center>
+        <img src="LaMejorCocteraDelMundoMundial.png" width="150px">
+    </center>
+</div>
+<br>
+<div>
+    <center>
+    <fieldset>
+        <legend>Ingresar usuario</legend>
+        
+            <form action="secciones/cocteles.html" method="POST">
+                <label for="Nombre">Nombre: </label>
+                <input type="text" name="Nombre" required="required" /></title><br /> 
+                <label for="Contraseña">Contraseña: </label>
+                <input type="password" name="Contraseña" required="required" /><br />
+                <input type="submit" value="Submit" />
+            </form>
+                       
+    </fieldset>            
+    </center>
+</div>        
+</body>
+{%endblock%}
+
+<footer>
+    <p>Aquí van los datos empresariales</p>
+</footer>
+    
