Avances, próxima tarea, crear los usuarios

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
 {%extends 'base.html'%}
-{%block title%}
-        
-{% endblock%}
+{%block title%}Mejor coctelera del mundo{% endblock%}
 
 {%block content%}
 <div>
@@ -13,9 +11,8 @@
 <div>
     <center>
     <fieldset>
-        <legend>Ingresar usuario</legend>
-        
-            <form action="secciones/cocteles.html" method="POST">
+        <legend>Ingresar usuario</legend>        
+            <form action="#" method="POST"> 
                 <label for="Nombre">Nombre: </label>
                 <input type="text" name="Nombre" required="required" /></title><br /> 
                 <label for="Contraseña">Contraseña: </label>
