--- a/templates/cocteles.html
+++ b/templates/cocteles.html
@@ -1,10 +1,12 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
+{%extends 'base.html'%}
+{%block title%}
+Lista de cocteles
+{% endblock%}
+
+{%block content%}
         <p>A cocktail is an alcoholic mixed drink, which is either a combination of spirits, or one or more spirits mixed with other ingredients such as fruit juice, flavored syrup, or cream. There are various types of cocktails, based on the number and kind of ingredients added.</p>
-        <a href="desc.html">
+        <a href="secciones/desc.html">
         <img src="coctel.png" alt="Imágen de un coctel" width="200px"></a>
-    </body>
+{%endblock%}
+
 </html>
