Ya funciona la página por encima, falta meter el buscador

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {%block content%}
 <div>
     <center>
-        <img src="LaMejorCocteraDelMundoMundial.png" width="150px">
+        <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" width="150px">
     </center>
 </div>
 <br>
