--- a/loged/templates/cocteles.html
+++ b/loged/templates/cocteles.html
@@ -4,15 +4,24 @@ Lista de cocteles
 {% endblock%}
 
 {%block content%}
-
-<form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-</form> 
-
-        {%for dat in data["drinks"]%}
-        <a href="{{url_for('coctel.desc', type=dat.get('idDrink'))}}"><h1>{{dat.get("strDrink")}}</h1></a>
-                <p>{{dat.get("strInstructions")}}</p>
-        {%endfor%}
+<div>
+        <center>
+        <form action="" method="POST">
+                <label for="search">Busqueda:</label><br>
+                <input type="text" id="search" name="search" placeholder="Buscar un coctel..."><br>
+                
+        </form> 
+        </center>
+</div>
+<div>
+        {%if data["drinks"]==None%}
+                <h1>No drinks found</h1>
+        {%else%}
+                {%for dat in data["drinks"]%}
+                        <a href="{{url_for('coctel.desc', type=dat.get('idDrink'))}}"><h1>{{dat.get("strDrink")}}</h1></a>
+                        <p>{{dat.get("strInstructions")}}</p>
+                {%endfor%}
+        {%endif%}
+</div>
 {%endblock%}
 
