--- a/profile/templates/index.html
+++ b/profile/templates/index.html
@@ -11,16 +11,17 @@
 <div>
     <center>
         <div>
-            <h2>Contact</h2>
+            <h2>Ingresar</h2>
             <form method="POST" action="/">
                 {{ form.csrf_token }}
                 <div >{{ form.name.label }} {{ form.name(size=20) }}</div>
                 <div >{{ form.password.label }} {{ form.password }}</div>
                 {{ form.login_bt }}
-                <!-- {{ form.signup_bt }} 
-                {{ form.invitate }} -->
             </form>
-          </div>                
+            
+            <a href="{{ url_for('signUp') }}"> <button type="button"> Sign Up </button></a>
+          </div>
+
     </center>
 </div>        
 </body>
