Página de confirmación de pedido

--- a/profile/templates/index.html
+++ b/profile/templates/index.html
@@ -20,6 +20,7 @@
             </form>
             
             <a href="{{ url_for('signUp') }}"> <button type="button"> Sign Up </button></a>
+            <a href="{{ url_for('home_coctail.home') }}"><button type="button">Continue as guest</button></a>
           </div>
 
     </center>
