--- a/profile/coctail/templates/desc.html
+++ b/profile/coctail/templates/desc.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block title%}
-Coctel en específico
+Coctel {{ desCoc.get('drinks')[0].get("strDrink")}}
 {% endblock%}
 
 {%block content%}
@@ -16,6 +16,11 @@ Coctel en específico
     <div>
         <center>
         <img src="{{desCoc.get('drinks')[0].get('strDrinkThumb')}}" alt="Not found" width="150px">
+        </center>
+    </div>
+    <div>
+        <center>
+            <a href="{{url_for('coctail_bp.orderCoctail', type=desCoc.get('drinks')[0].get('idDrink'))}}"> <button>Ordenar</button> </a>
         </center>
     </div>
 {%endblock%}
