--- a/profile/templates/base.html
+++ b/profile/templates/base.html
@@ -1,17 +1,113 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        
-        <title>{%block title%}{% endblock%}</title>
-        
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>{%block title%}{% endblock%}</title>
+
+        <style>
+            body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+            .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+            .fa-anchor,.fa-coffee {font-size:200px}
+            </style>
+            
     </head>
+    
     <body>
-        
-        {%block content%}{%endblock%}
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <!-- Navbar -->
+<div class="w3-top">
+    <div class="w3-bar w3-gray w3-card w3-left-align w3-large">
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      {%block links%}{% endblock links%}
+      <button onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-right w3-button w3-hide-small w3-padding-large w3-hover-white">Login</button>
+  
+    </div>
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    {%block linksm%}{% endblock linksm%}
+  </div>
+</div>
+
+<!-- login Modal -->
+<div id="login" class="w3-modal">
+    <div class="w3-modal-content w3-animate-zoom">
+      <div class="w3-container w3-black">
+        <span onclick="document.getElementById('login').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+        <h1>Contact</h1>
+      </div>
+      <div class="w3-container">
+        <p>Entre su usuario para buscar cocteles:</p>
+        <form action="/" method="POST">
+            {{ form.csrf_token }}
+          <p><div class="w3-input w3-padding-16 w3-border">>{{ form.name.label }} {{ form.name(size=20) }}</div></p>
+          <p><div class="w3-input w3-padding-16 w3-border">{{ form.password.label }} {{ form.password }}</div></p>
+          <p><div class="w3-button">{{ form.login_bt }}</div></p>
+        </form>
+        <p><a href="{{ url_for('signUp') }}"> <button class="w3-button" type="button"> Sign Up </button></a></p>
+        <p><a href="{{ url_for('home_coctail.home') }}"><button class="w3-button" type="button">Continue as guest</button></a></p>
+      </div>
+    </div>
+  </div>  
+
+
+ 
+  
+<!-- Header -->
+<header class="w3-container w3-black w3-center" style="padding:128px 16px">
+    <h1 class="w3-margin w3-jumbo">{%block HEADER%}{% endblock HEADER%}</h1>
+    <p class="w3-xlarge">By Cocteles.inc®</p>
+    <div>
+      <center>
+          <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" width="150px">
+      </center>
+  </div>
+  </header>
+  
+  {%block grids%}{% endblock grids%}
+  
+  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+      <h1 class="w3-margin w3-xlarge">Cita del día: Si hay playa, hay alcohol.</h1>
+  </div>
+  
+  <!-- Footer -->
+  <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+    <div class="w3-xlarge w3-padding-32">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+   </div>
+   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  </footer>
+  
+  <script>
+  // Used to toggle the menu on small screens when clicking on the menu button
+  function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else { 
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+  </script>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
     </body>
-</html>
+    
+    </html>
