--- a/profile/templates/index.html
+++ b/profile/templates/index.html
@@ -1,34 +1,56 @@
 {%extends 'base.html'%}
 {%block title%}Mejor coctelera del mundo{% endblock%}
 
-{%block content%}
-<div>
-    <center>
-        <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" width="150px">
-    </center>
-</div>
-<br>
-<div>
-    <center>
-        <div>
-            <h2>Ingresar</h2>
-            <form method="POST" action="/">
-                {{ form.csrf_token }}
-                <div >{{ form.name.label }} {{ form.name(size=20) }}</div>
-                <div >{{ form.password.label }} {{ form.password }}</div>
-                {{ form.login_bt }}
-            </form>
-            
-            <a href="{{ url_for('signUp') }}"> <button type="button"> Sign Up </button></a>
-            <a href="{{ url_for('home_coctail.home') }}"><button type="button">Continue as guest</button></a>
-          </div>
+{%block links%}
+<a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+<a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Misión</a>
+<a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contacto</a>
+{% endblock%}
 
-    </center>
-</div>        
-</body>
-{%endblock%}
+{%block linksm%}
+<a href="#" class="w3-bar-item w3-button w3-padding-large">>Home</a>
+<a href="#" class="w3-bar-item w3-button w3-padding-large">>Misión</a>
+<a href="#" class="w3-bar-item w3-button w3-padding-large">>Contacto</a>
+{% endblock linksm%}
 
-<footer>
-    <p>Aquí van los datos empresariales</p>
-</footer>
-    
+{%block HEADER%}INICIO{% endblock HEADER%}
+
+
+{%block grids%}
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-twothird">
+        <h1>Lorem Ipsum</h1>
+        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+  
+        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+  
+      <div class="w3-third w3-center">
+        <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Second Grid -->
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      </div>
+  
+      <div class="w3-twothird">
+        <h1>Lorem Ipsum</h1>
+        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+  
+        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+  </div>
+{% endblock grids%}
+
