Medio bonito uwu

--- a/profile/coctail/templates/confirmCoctail.html
+++ b/profile/coctail/templates/confirmCoctail.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%}
+{%extends 'base3.html'%}
 {%block title%}
 Ordenar coctel {{ desCoc.get('drinks')[0].get("strDrink")}}
 {% endblock%}
