--- a/profile/coctail/templates/desc.html
+++ b/profile/coctail/templates/desc.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%}
+{%extends 'base3.html'%}
 {%block title%}
 Coctel {{ desCoc.get('drinks')[0].get("strDrink")}}
 {% endblock%}
