--- a/profile/templates/index.html
+++ b/profile/templates/index.html
@@ -14,6 +14,12 @@
 
 {%block grids%}
 <!-- First Grid -->
+{% for message in get_flashed_messages() %}
+  <div>
+    {{ message }}
+  </div>
+{% endfor %}
+
 <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-twothird">
