--- a/profile/templates/mission.html
+++ b/profile/templates/mission.html
@@ -13,6 +13,11 @@
 
 {%block grids%}
 <!-- First Grid -->
+{% for message in get_flashed_messages() %}
+  <div>
+    {{ message }}
+  </div>
+{% endfor %}
 <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-twothird">
