--- a/profile/templates/base.html
+++ b/profile/templates/base.html
@@ -59,21 +59,34 @@
       </div>
     </div>
   </div>  
-
-  <!-- signup Modal -->
-  <a href="{{ url_for('signUp') }}" class="w3-bar-item w3-button w3-padding-large">>Registrarse</a>
-
- 
+  <!-- <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" alt="Hamburger Catering" width="1280" height="720"> -->
   
 <!-- Header -->
 <header class="w3-container w3-black w3-center" style="padding:128px 16px">
-    <h1 class="w3-margin w3-jumbo">{%block HEADER%}{% endblock HEADER%}</h1>
+  <h1 class="w3-margin w3-jumbo">{%block HEADER%}{% endblock HEADER%}</h1>
     <p class="w3-xlarge">By Cocteles.inc®</p>
-    <div>
-      <center>
-          <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" width="150px">
-      </center>
-  </div>
+    <!-- Automatic Slideshow Images -->
+    <div class="mySlides w3-display-container w3-center">
+      <img src="{{ url_for('static',filename ='images/bartender.jpg')}}" alt="Bartender" width="1920" height="1080">
+      <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+        <h3>Los mejores</h3>
+        <p><b>No encontrarás una experiencia similar</b></p>   
+      </div>
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+      <img src="{{ url_for('static',filename ='images/Echantinggirl.jpg')}}" alt="Enchantig girl" width="1920" height="1080">
+      <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+        <h3>New York</h3>
+        <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      </div>
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+      <img src="{{ url_for('static',filename ='images/fruit-cocktail-with-fresh-strawberry.jpg')}}" alt="Coctail" width="1920" height="1080 ">
+      <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+        <h3>Chicago</h3>
+        <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      </div>
+    </div>
   </header>
   
   {%block content%}{% endblock content%}
@@ -98,6 +111,23 @@
   </footer>
   
   <script>
+
+    // Automatic Slideshow - change image every 4 seconds
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}    
+  x[myIndex-1].style.display = "block";  
+  setTimeout(carousel, 6000);    
+}
+
   // Used to toggle the menu on small screens when clicking on the menu button
   function myFunction() {
     var x = document.getElementById("navDemo");
