--- a/profile/templates/contact.html
+++ b/profile/templates/contact.html
@@ -5,6 +5,7 @@
 <a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white"> Home</a>
 <a href="{{ url_for('mission') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Misión</a>
 <a href="{{ url_for('contact') }}" class="w3-bar-item w3-button w3-padding-large w3-white">Contacto</a>
+<a href="{{ url_for('signUp') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Registro</a>
 {% endblock%}
 
 
