--- a/profile/templates/base.html
+++ b/profile/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -16,6 +16,7 @@
             body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
             .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
             .fa-anchor,.fa-coffee {font-size:200px}
+            .mySlides {display: none}
             </style>
             
     </head>
@@ -28,7 +29,6 @@
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       {%block links%}{% endblock links%}
       <button onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-right w3-button w3-hide-small w3-padding-large w3-hover-white">Login</button>
-      <button onclick="document.getElementById('signup').style.display='block'" class="w3-bar-item w3-right w3-button w3-hide-small w3-padding-large w3-hover-white">Signup</button>
   
     </div>
   <!-- Navbar on small screens -->
@@ -36,6 +36,7 @@
     <a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-padding-large">>Home</a>
     <a href="{{ url_for('mission') }}" class="w3-bar-item w3-button w3-padding-large">>Misión</a>
     <a href="{{ url_for('contact') }}" class="w3-bar-item w3-button w3-padding-large">>Contacto</a>
+    <button onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-button w3-padding-large">Login</button>
   </div>
 </div>
 
@@ -54,7 +55,6 @@
           <p><div class="w3-padding-16">{{ form1.password.label }} {{ form1.password }}</div></p>
           <p><div>{{ form1.login_bt }}</div></p>
         </form>
-        <p><a href="{{ url_for('login') }}"> <button class="w3-button" type="button"> Volver al inicio </button></a></p>
         <p><a href="{{ url_for('home_coctail.home') }}"><button class="w3-button" type="button">Continuar como invitado</button></a></p>
       </div>
     </div>
@@ -67,21 +67,21 @@
     <p class="w3-xlarge">By Cocteles.inc®</p>
     <!-- Automatic Slideshow Images -->
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/bartender.jpg')}}" alt="Bartender" width="1920" height="1080">
+      <img src="{{ url_for('static',filename ='images/bartender.jpg')}}" alt="Bartender" width="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Los mejores</h3>
         <p><b>No encontrarás una experiencia similar</b></p>   
       </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/Echantinggirl.jpg')}}" alt="Enchantig girl" width="1920" height="1080">
+      <img src="{{ url_for('static',filename ='images/Echantinggirl.jpg')}}" alt="Enchantig girl" width="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>New York</h3>
         <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
       </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/fruit-cocktail-with-fresh-strawberry.jpg')}}" alt="Coctail" width="1920" height="1080 ">
+      <img src="{{ url_for('static',filename ='images/fruit-cocktail-with-fresh-strawberry.jpg')}}" alt="Coctail" width="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Chicago</h3>
         <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
