--- a/profile/templates/signUp.html
+++ b/profile/templates/signUp.html
@@ -2,13 +2,14 @@
 {%block title%}Mejor coctelera del mundo{% endblock%}
 
 {%block links%}
-<a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+<a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
 <a href="{{ url_for('mission') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Misión</a>
 <a href="{{ url_for('contact') }}" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contacto</a>
+<a href="{{ url_for('signUp') }}" class="w3-bar-item w3-button w3-padding-large w3-white">Registro</a>
 {% endblock%}
 
 
-{%block HEADER%}REGISTRO{% endblock HEADER%}
+{%block HEADER%}Registro{% endblock HEADER%}
 
 
 {%block grids%}
