--- a/profile/templates/base.html
+++ b/profile/templates/base.html
@@ -22,7 +22,7 @@
     </head>
     
     <body>
-
+      <div class="w3-content" style="max-width:2000px;margin-top:46px">
         <!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-gray w3-card w3-left-align w3-large">
@@ -67,21 +67,21 @@
     <p class="w3-xlarge">By Cocteles.inc®</p>
     <!-- Automatic Slideshow Images -->
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/bartender.jpg')}}" alt="Bartender" width="width:100%">
+      <img src="{{ url_for('static',filename ='images/bartender.jpg')}}" alt="Bartender" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Los mejores</h3>
         <p><b>No encontrarás una experiencia similar</b></p>   
       </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/Echantinggirl.jpg')}}" alt="Enchantig girl" width="width:100%">
+      <img src="{{ url_for('static',filename ='images/Echantinggirl.jpg')}}" alt="Enchanting girl" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>New York</h3>
         <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
       </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-      <img src="{{ url_for('static',filename ='images/fruit-cocktail-with-fresh-strawberry.jpg')}}" alt="Coctail" width="width:100%">
+      <img src="{{ url_for('static',filename ='images/fruit-cocktail-with-fresh-strawberry.jpg')}}" alt="Coctail" style="width:100%">
       <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Chicago</h3>
         <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
