--- a/profile/templates/base.html
+++ b/profile/templates/base.html
@@ -22,7 +22,7 @@
     </head>
     
     <body>
-      <div class="w3-content" style="max-width:2000px;margin-top:46px">
+      <div class="w3-content" style="max-width:2000px">
         <!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-gray w3-card w3-left-align w3-large">
@@ -33,9 +33,9 @@
     </div>
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-padding-large">>Home</a>
-    <a href="{{ url_for('mission') }}" class="w3-bar-item w3-button w3-padding-large">>Misión</a>
-    <a href="{{ url_for('contact') }}" class="w3-bar-item w3-button w3-padding-large">>Contacto</a>
+    <a href="{{ url_for('login') }}" class="w3-bar-item w3-button w3-padding-large">Home</a>
+    <a href="{{ url_for('mission') }}" class="w3-bar-item w3-button w3-padding-large">Misión</a>
+    <a href="{{ url_for('contact') }}" class="w3-bar-item w3-button w3-padding-large">Contacto</a>
     <button onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-button w3-padding-large">Login</button>
   </div>
 </div>
@@ -62,7 +62,7 @@
   <!-- <img src="{{ url_for('static',filename ='images/LaMejorCocteraDelMundoMundial.png')}}" alt="Hamburger Catering" width="1280" height="720"> -->
   
 <!-- Header -->
-<header class="w3-container w3-black w3-center" style="padding:128px 16px">
+<header class="w3-container w3-black w3-center" style="padding:70px 16px">
   <h1 class="w3-margin w3-jumbo">{%block HEADER%}{% endblock HEADER%}</h1>
     <p class="w3-xlarge">By Cocteles.inc®</p>
     <!-- Automatic Slideshow Images -->
