--- a/profile/templates/index.html
+++ b/profile/templates/index.html
@@ -23,16 +23,14 @@
 <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-twothird">
-        <h1>Lorem Ipsum</h1>
-        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+        <h1>La mejor coctelera</h1>
+        <h5 class="w3-padding-32">Con la mejor coctelera del mundo mundial degustarás de una experiencia maravillosa</h5>
   
-        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="w3-text-grey">Con tecnología de punta y un diseño inigualable, traemos a tu negocio un invento que revolucionará la forma en la que sirves a tus clientes los mejores tragos y las mejores noches.</p>
       </div>
   
       <div class="w3-third w3-center">
-        <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+        <i class="fa fa-glass w3-padding-64 w3-text-red w3-margin-right" style='font-size:204px'></i>
       </div>
     </div>
   </div>
@@ -41,16 +39,14 @@
   <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="fa fa-archive w3-padding-64 w3-text-red w3-margin-right" style='font-size:204px'></i>
       </div>
   
       <div class="w3-twothird">
-        <h1>Lorem Ipsum</h1>
-        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+        <h1>Un catálogo para ti</h1>
+        <h5 class="w3-padding-32">Cualquiera puede hacer un coctel</h5>
   
-        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="w3-text-grey">Gracias a nuestra coctelera, hasta el nuevo mesero que contrataste podrá hacer cocteles de grado profesional, que dejarían al bartender con más años de experiencia, en pañales.</p>
       </div>
     </div>
   </div>
