--- a/profile/templates/mission.html
+++ b/profile/templates/mission.html
@@ -23,15 +23,15 @@
     <div class="w3-content">
       <div class="w3-twothird">
         <h1>Nuestra misión</h1>
-        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+        <h5 class="w3-padding-32">Al alcance de todos</h5>
   
-        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="w3-text-grey">“En Cocteles.inc, nuestra misión es habilitar a las personas y negocios de todo el mundo para que comprendan todo su potencial. Consideramos nuestra misión como un compromiso con nuestros clientes.
+
+          Nos entregamos a ese compromiso esforzándonos por crear tecnología que sea accesible para todos — todas las edades y habilidades. Cocteles.inc es uno de los líderes de la industria en innovación de la accesibilidad y en la construcción de productos que sean más seguros y más fáciles de usar.”</p>
       </div>
   
       <div class="w3-third w3-center">
-        <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+        <i class="fa fa-heartbeat w3-padding-64 w3-text-red w3-margin-right" style='font-size:204px'></i>
       </div>
     </div>
   </div>
@@ -40,16 +40,14 @@
   <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        <i class="fa fa-eye w3-padding-64 w3-text-red w3-margin-right" style='font-size:204px'></i>
       </div>
   
       <div class="w3-twothird">
-        <h1>Lorem Ipsum</h1>
-        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+        <h1>Visión</h1>
+        <h5 class="w3-padding-32">Enriquecer la vida de la gente</h5>
   
-        <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="w3-text-grey">"Nuestra visión es crear una tecnología innovadora que es accesible a todo el mundo y que se adapta a las necesidades de cada persona. La tecnología accesible elimina barreras para las personas y permite a las personas aprovechar al máximo de sus capacidades.”</p>
       </div>
     </div>
   </div>
